--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,9 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 # window numbering from 1
 set -g base-index 1
 
+# window renumbering
+set-option -g renumber-windows on
+
 # mouse
 set -g mouse on 
 
@@ -51,6 +54,7 @@ if-shell "uname | grep -q Darwin" "source-file ~/.tmux/tmux_macos.conf" "source-
 
 # plugins
 # run -b "/bin/bash ${HOME}/.tmux/plugins/tmux-current-pane-hostname/current_pane_hostname.tmux"
+# run-shell "${HOME}/.tmux/plugins/tmux-open/open.tmux"
 
 # theme
 source-file "${HOME}/.tmux/themes/pimux_mod.tmuxtheme"
