--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
     "workbench.startupEditor": "newUntitledFile",
     "workbench.statusBar.visible": true,
     "workbench.activityBar.visible": true,
-    "workbench.colorTheme": "Quiet Light",
+    "workbench.colorTheme": "Shades of Purple",
     // Editor
     "editor.fontSize": 16,
     "editor.minimap.enabled": false,
@@ -51,9 +51,9 @@
     //
     "[python]": {
         "editor.defaultFormatter": "ms-python.python",
-        "editor.formatOnSave": true,
+        "editor.formatOnSave": false,
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true
+            "source.organizeImports": false
         },
         "editor.wordWrapColumn": 88,
     },
@@ -90,7 +90,21 @@
     // https://github.com/microsoft/vscode-python/issues/5840#issuecomment-497321419
     "python.sortImports.path": "${env:HOME}/opt/anaconda3/bin/isort",
     "python.sortImports.args": [
-        "--settings-path=${workspaceFolder}/setup.cfg"
+        "--settings-path=${workspaceFolder}"
+    ],
+    //
+    // Multicommands
+    // https://gist.github.com/cb109/47496649640c9c5f4287b06db7a7c197
+    //
+    "multiCommand.commands": [
+        {
+            "command": "multiCommand.sortImportsWhenPythonAndSave",
+            "sequence": [
+                "python.sortImports",
+                "editor.action.formatDocument",
+                "workbench.action.files.save",
+            ]
+        }
     ],
     // ETC
     "atomKeymap.promptV3Features": true,
