--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -4,21 +4,21 @@ window:
   padding:
     x: 10
     y: 10
-  decorations: full 
+  decorations: full
 
 font:
   size: 22
-  
+
   normal:
     family: JetBrains Mono
     style: Semi Light
 
   bold:
-    family: JetBrains Mono 
+    family: JetBrains Mono
     style: Bold
 
   italic:
-    family: JetBrains Mono 
+    family: JetBrains Mono
     style: Italic
 
 draw_bold_text_with_bright_colors: true
@@ -58,18 +58,6 @@ colors:
 
 key_bindings:
   - { key: Comma,    mods: Control,       command: {program: "vi", args: ["$HOME/.config/alacritty/alacritty.yml"]} }
-  - { key: T,        mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["neww"] }}
-  - { key: W,        mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["kill-window"] }}
-  - { key: Key1,     mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["select-window","-t","1"] }}
-  - { key: Key2,     mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["select-window","-t","2"] }}
-  - { key: Key3,     mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["select-window","-t","3"] }}
-  - { key: Key4,     mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["select-window","-t","4"] }}
-  - { key: Key5,     mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["select-window","-t","5"] }}
-  - { key: Key6,     mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["select-window","-t","6"] }}
-  - { key: Key7,     mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["select-window","-t","7"] }}
-  - { key: Key8,     mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["select-window","-t","8"] }}
-  - { key: Key9,     mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["select-window","-t","9"] }}
-  - { key: Key0,     mods: Control,       command: {program: "/usr/local/bin/tmux", args: ["select-window","-t","0"] }}
   - { key: N,        mods: Control,       action: SpawnNewInstance       }
   - { key: Left,     mods: Control,       chars: "\x1bb"                       } # one word left
   - { key: Right,    mods: Control,       chars: "\x1bf"                       } # one word right
@@ -104,10 +92,10 @@ mouse:
   url:
     launcher: open
 
-shell:
-    program: /usr/local/bin/tmux
-    args:
-     - new
-     - -A
-     - -s
-     - main
+#shell:
+#    program: /usr/local/bin/zsh
+#    args:
+#     - new
+#     - -A
+#     - -s
+#     - main
