--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,17 +13,26 @@ set-option -g prefix `
 unbind-key C-b
 
 # reload conf
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
+
+# detach window
+bind u detach
+
+# killing window
+bind w kill-window
 
 # window numbering from 1
 set -g base-index 1
 
+# window renumbering
+set-option -g renumber-windows on
+
 # mouse
-set -g mouse on 
+set -g mouse on
 
 # split screen bindings
 bind - split-window -v
-bind '\' split-window -h 
+bind '\' split-window -h
 
 # title string
 #set-option -g set-titles on
@@ -31,7 +40,7 @@ bind '\' split-window -h
 
 # history
 set -g history-limit 10000
- 
+
 # length of status message display
 set-option -g display-time 600
 
@@ -47,10 +56,27 @@ bind a set-option -g prefix ` \; display-message "Prefix changed to `"
 #set-option -g default-command "safe-reattach-to-user-namespace -l zsh"
 
 # additional config depending on OS
-if-shell "uname | grep -q Darwin" "source-file ~/.tmux/tmux_macos.conf" "source-file ~/.tmux/tmux_linux.conf"
+if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/tmux.macos.conf" "source-file ~/.config/tmux/tmux.linux.conf"
 
 # plugins
-# run -b "/bin/bash ${HOME}/.tmux/plugins/tmux-current-pane-hostname/current_pane_hostname.tmux"
+# run -b "/bin/bash ${HOME}/.config/tmux/plugins/tmux-current-pane-hostname/current_pane_hostname.tmux"
+# run-shell "${HOME}/.config/tmux/plugins/tmux-open/open.tmux"
 
 # theme
-source-file "${HOME}/.tmux/themes/pimux_mod.tmuxtheme"
+source-file "${HOME}/.config/tmux/themes/pimux_mod.tmuxtheme"
+
+# remote sessions
+if-shell 'test -n "$SSH_CLIENT"' \
+    'source-file ${HOME}/.config/tmux/tmux.remote.conf'
+
+# toggle keybindings for nested sessions
+#bind -T root F12  \
+#    set prefix None \;\
+#    set key-table off \;\
+#    if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+#    refresh-client -S
+#
+#bind -T off F12 \
+#  set -u prefix \;\
+#  set -u key-table \;\
+#  refresh-client -S
