--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,60 +1,1 @@
-# colors
-set -g default-terminal "screen-256color"
-
-# utf8
-#set -g utf8
-#set-window-option -g utf8 on
-
-# use zsh
-set-option -g default-shell /bin/zsh
-
-# prefix
-set-option -g prefix `
-unbind-key C-b
-
-# reload conf
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
-
-# window numbering from 1
-set -g base-index 1
-
-# window renumbering
-set-option -g renumber-windows on
-
-# mouse
-set -g mouse on 
-
-# split screen bindings
-bind - split-window -v
-bind '\' split-window -h 
-
-# title string
-#set-option -g set-titles on
-#set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not)
-
-# history
-set -g history-limit 10000
- 
-# length of status message display
-set-option -g display-time 600
-
-# sync panes
-bind y setw synchronize-panes
-
-# set alternative prefix, useful for nested sessions
-bind b set-option -g prefix C-b \; display-message "Prefix changed to C-b"
-bind a set-option -g prefix ` \; display-message "Prefix changed to `"
-
-# safe reattach user namespace
-# found this to be no longer necessary
-#set-option -g default-command "safe-reattach-to-user-namespace -l zsh"
-
-# additional config depending on OS
-if-shell "uname | grep -q Darwin" "source-file ~/.tmux/tmux_macos.conf" "source-file ~/.tmux/tmux_linux.conf"
-
-# plugins
-# run -b "/bin/bash ${HOME}/.tmux/plugins/tmux-current-pane-hostname/current_pane_hostname.tmux"
-# run-shell "${HOME}/.tmux/plugins/tmux-open/open.tmux"
-
-# theme
-source-file "${HOME}/.tmux/themes/pimux_mod.tmuxtheme"
+source-file $HOME/.config/tmux/tmux.conf
