--- a/.config/tmux/base.conf
+++ b/.config/tmux/base.conf
@@ -8,13 +8,6 @@ set -g default-terminal "screen-256color"
 # use zsh
 set-option -g default-shell /bin/zsh
 
-# prefix
-set-option -g prefix `
-unbind-key C-b
-
-# reload conf
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
-
 # detach window
 bind u detach
 
@@ -28,7 +21,7 @@ set -g base-index 1
 set-option -g renumber-windows on
 
 # mouse
-set -g mouse on
+set -g mouse off
 
 # split screen bindings
 bind - split-window -v
@@ -56,7 +49,7 @@ bind a set-option -g prefix ` \; display-message "Prefix changed to `"
 #set-option -g default-command "safe-reattach-to-user-namespace -l zsh"
 
 # additional config depending on OS
-if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/tmux.macos.conf" "source-file ~/.config/tmux/tmux.linux.conf"
+if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/macos.conf" "source-file ~/.config/tmux/linux.conf"
 
 # plugins
 # run -b "/bin/bash ${HOME}/.config/tmux/plugins/tmux-current-pane-hostname/current_pane_hostname.tmux"
@@ -67,16 +60,4 @@ source-file "${HOME}/.config/tmux/themes/pimux_mod.tmuxtheme"
 
 # remote sessions
 if-shell 'test -n "$SSH_CLIENT"' \
-    'source-file ${HOME}/.config/tmux/tmux.remote.conf'
-
-# toggle keybindings for nested sessions
-#bind -T root F12  \
-#    set prefix None \;\
-#    set key-table off \;\
-#    if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
-#    refresh-client -S
-#
-#bind -T off F12 \
-#  set -u prefix \;\
-#  set -u key-table \;\
-#  refresh-client -S
+    'source-file ${HOME}/.config/tmux/remote.conf'
