--- a/.config/tmux/prefix_backtick.conf
+++ b/.config/tmux/prefix_backtick.conf
@@ -17,3 +17,8 @@ setw -g window-status-current-style bg=default,fg=$FOREGROUND,bright
 # status
 set -g status-left ''
 set -g status-right '#{?client_prefix,...,} #h · #S:#I.#P'
+
+set -g mouse on
+#bind -n WheelUpPane page-up \; display-message "Config reloaded..."
+#set-window-option -g mode-keys vi
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
