--- a/.config/tmux/prefix_C-b.conf
+++ b/.config/tmux/prefix_C-b.conf
@@ -3,14 +3,15 @@ source-file ~/.config/tmux/base.conf
 
 # reload conf
 bind r source-file ~/.config/tmux/prefix_C-b.conf \; display-message "Config reloaded..."
+bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
 
 # clipboard
 set-option -s set-clipboard off
 
 # windows
-setw -g window-status-format "#W "
-setw -g window-status-current-format "#W "
-setw -g window-status-current-style bg=default,fg=$FOREGROUND,bright
+setw -g window-status-format "#I #W "
+setw -g window-status-current-format "#I #W "
+setw -g window-status-current-style bg=default,fg=white,bright
 
 # status
 set -g status-left ''
