--- a/.config/tmux/prefix_backtick.conf
+++ b/.config/tmux/prefix_backtick.conf
@@ -12,7 +12,7 @@ bind r source-file ~/.config/tmux/prefix_backtick.conf \; display-message "Confi
 # windows
 setw -g window-status-format "#I "
 setw -g window-status-current-format "#I "
-setw -g window-status-current-style bg=default,fg=$FOREGROUND,bright
+setw -g window-status-current-style bg=default,fg=white,bright
 
 # status
 set -g status-left ''
