Update nested tmux config

--- a/.config/tmux/base.conf
+++ b/.config/tmux/base.conf
@@ -1,5 +1,5 @@
 # colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color-bce"
 
 # utf8
 #set -g utf8
@@ -41,8 +41,8 @@ set-option -g display-time 600
 bind y setw synchronize-panes
 
 # set alternative prefix, useful for nested sessions
-bind b set-option -g prefix C-b \; display-message "Prefix changed to C-b"
-bind a set-option -g prefix ` \; display-message "Prefix changed to `"
+#bind b set-option -g prefix C-b \; display-message "Prefix changed to C-b"
+#bind a set-option -g prefix ` \; display-message "Prefix changed to `"
 
 # safe reattach user namespace
 # found this to be no longer necessary
