--- a/.config/tmux/prefix_C-a.conf
+++ b/.config/tmux/prefix_C-a.conf
@@ -1,9 +1,25 @@
 # base
 source-file ~/.config/tmux/base.conf
 
+# reload conf
+bind r source-file ~/.config/tmux/prefix_C-a.conf \; display-message "Config reloaded..."
+
+# windows
+setw -g window-status-format "#I #W "
+setw -g window-status-current-format "#I #W "
+
+# status
+set -g status-right '#{?client_prefix,...,} #S:#I.#P · %H:%M'
+
+# name new windows
+bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
+
+# no clipboard
+set-option -s set-clipboard off
+
+# no mouse
+set -g mouse off
+
 # prefix
 set-option -g prefix C-a
 unbind-key C-b
-
-# reload conf
-bind r source-file ~/.config/tmux/prefix_C-a.conf \; display-message "Config reloaded..."
