--- a/.config/tmux/prefix_backtick.conf
+++ b/.config/tmux/prefix_backtick.conf
@@ -1,24 +1,28 @@
 # base
 source-file ~/.config/tmux/base.conf
 
-# prefix
-set-option -g prefix `
-unbind-key C-b
-bind ` send-prefix
-
 # reload conf
 bind r source-file ~/.config/tmux/prefix_backtick.conf \; display-message "Config reloaded..."
 
 # windows
 setw -g window-status-format "#I "
 setw -g window-status-current-format "#I "
-setw -g window-status-current-style bg=default,fg=white,bright
 
 # status
-set -g status-left ''
+#set -g status-right '#{?client_prefix,...,}'
 set -g status-right '#{?client_prefix,...,} #h · #S:#I.#P'
 
-set -g mouse on
+# mouse
+set -g mouse
+
+# prefix
+set-option -g prefix `
+unbind-key C-b
+
+# send ` if pressed twice
+bind ` send-prefix
+
+# trying out things
 #bind -n WheelUpPane page-up \; display-message "Config reloaded..."
 #set-window-option -g mode-keys vi
 #set -g terminal-overrides 'xterm*:smcup@:rmcup@'
