--- a/.config/tmux/prefix_C-b.conf
+++ b/.config/tmux/prefix_C-b.conf
@@ -3,28 +3,19 @@ source-file ~/.config/tmux/base.conf
 
 # reload conf
 bind r source-file ~/.config/tmux/prefix_C-b.conf \; display-message "Config reloaded..."
-bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
-
-# clipboard
-set-option -s set-clipboard off
 
 # windows
 setw -g window-status-format "#I #W "
 setw -g window-status-current-format "#I #W "
-setw -g window-status-current-style bg=default,fg=white,bright
 
 # status
-set -g status-left ''
 set -g status-right '#{?client_prefix,...,} %H:%M'
 
-# custom shortcuts
-bind -n M-1 select-window -t 1
-bind -n M-2 select-window -t 2
-bind -n M-3 select-window -t 3
-bind -n M-4 select-window -t 4
-bind -n M-5 select-window -t 5
-bind -n M-6 select-window -t 6
-bind -n M-7 select-window -t 7
-bind -n M-8 select-window -t 8
-bind -n M-9 select-window -t 9
-bind -n M-0 select-window -t 10
+# name new windows
+bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
+
+# no clipboard
+set-option -s set-clipboard off
+
+# mouse
+set -g mouse on
