--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -7,7 +7,7 @@ window:
   decorations: full
 
 font:
-  size: 22
+  size: 24 
 
   normal:
     family: JetBrains Mono
@@ -21,82 +21,109 @@ font:
     family: JetBrains Mono
     style: Italic
 
-draw_bold_text_with_bright_colors: true
+draw_bold_text_with_bright_colors: false
 
 cursor:
   style: Underline
 
 # Colors (lovelace)
 colors:
-  bright:
-    black: '#414458'
-    blue: '#556fff'
-    cyan: '#3fdcee'
-    green: '#18e3c8'
-    magenta: '#b043d1'
-    red: '#ff4971'
-    white: '#bebec1'
-    yellow: '#ff8037'
-  cursor:
-    cursor: '#c574dd'
-    text: '#ffffff'
-  normal:
-    black: '#282a36'
-    blue: '#8897f4'
-    cyan: '#79e6f3'
-    green: '#5adecd'
-    magenta: '#c574dd'
-    red: '#f37f97'
-    white: '#fdfdfd'
-    yellow: '#f2a272'
+  # Default Colors
   primary:
-    background: '#1d1f28'
-    foreground: '#fdfdfd'
-  selection:
-    background: '#c1deff'
-    text: '#000000'
+    background: '#f1f1f1'
+    foreground: '#424242'
+  # Normal colors
+  normal:
+    black: '#212121'
+    red: '#c30771'
+    green: '#10a778'
+    yellow: '#a89c14'
+    blue: '#008ec4'
+    magenta: '#523c79'
+    cyan: '#20a5ba'
+    white: '#e0e0e0'
+  # Bright colors
+  bright:
+    black: '#212121'
+    red: '#fb007a'
+    green: '#5fd7af'
+    yellow: '#f3e430'
+    blue: '#20bbfc'
+    magenta: '#6855de'
+    cyan: '#4fb8cc'
+    white: '#f1f1f1'
 
 key_bindings:
-  - { key: Comma,    mods: Control,       command: {program: "vi", args: ["$HOME/.config/alacritty/alacritty.yml"]} }
-  - { key: 1,        mods: Control|Shift, command: {program: "/usr/local/bin/tmux", args: ["new -A -s main"]} }
-  - { key: N,        mods: Control,       action: SpawnNewInstance       }
-  - { key: Left,     mods: Control,       chars: "\x1bb"                       } # one word left
-  - { key: Right,    mods: Control,       chars: "\x1bf"                       } # one word right
-  - { key: Left,     mods: Control,       chars: "\x1bOH",   mode: AppCursor   } # home
-  - { key: Right,    mods: Control,       chars: "\x1bOF",   mode: AppCursor   } # end
-  - { key: Up,       mods: Control,       chars: "\x1b[1;5A"                   }
-  - { key: Down,     mods: Control,       chars: "\x1b[1;5B"                   }
-  - { key: 28,       mods: Control,       chars: "{" }
-  - { key: 25,       mods: Control,       chars: "}" }
-  - { key: 37,       mods: Control,       chars: "@" }
-  - { key: 26,       mods: Control|Shift, chars: "\\" }
-  - { key: 26,       mods: Control,       chars: "|" }
-  - { key: 45,       mods: Control,       chars: "~" }
-  - { key: 23,       mods: Control,       chars: "[" }
-  - { key: 22,       mods: Control,       chars: "]" }
-  - { key: F,  mods: Control,            action: ToggleSimpleFullscreen }
-  - { key: Equals,    mods: Control,            action: IncreaseFontSize }
-  - { key: Minus,  mods: Control,            action: DecreaseFontSize }
-  - { key: V,      mods: Control,            action: Paste            }
+  - {
+      key: Comma,
+      mods: Control,
+      command:
+        {
+          program: "vi",
+          args: [ "$HOME/.config/alacritty/alacritty.yml" ]
+        }
+    }
+  - {
+      key: 1,
+      mods: Control|Shift,
+      command:
+        {
+          program: "/usr/local/bin/tmux",
+          args: [ "new -A -s main" ]
+        }
+    }
+  - { key: N, mods: Control, action: SpawnNewInstance }
+  - { key: Left, mods: Control, chars: "\eb" }
+  # one word left
+  - { key: Right, mods: Control, chars: "\ef" }
+  # one word right
+  - {
+      key: Left,
+      mods: Control,
+      chars: "\eOH",
+      mode: AppCursor
+    }
+  # home
+  - {
+      key: Right,
+      mods: Control,
+      chars: "\eOF",
+      mode: AppCursor
+    }
+  # end
+  - { key: Up, mods: Control, chars: "\e[1;5A" }
+  - { key: Down, mods: Control, chars: "\e[1;5B" }
+  - { key: 28, mods: Control, chars: "{" }
+  - { key: 25, mods: Control, chars: "}" }
+  - { key: 37, mods: Control, chars: "@" }
+  - { key: 26, mods: Control|Shift, chars: "\\" }
+  - { key: 26, mods: Control, chars: "|" }
+  - { key: 45, mods: Control, chars: "~" }
+  - { key: 23, mods: Control, chars: "[" }
+  - { key: 22, mods: Control, chars: "]" }
+  - { key: F, mods: Control, action: ToggleSimpleFullscreen }
+  - { key: Equals, mods: Control, action: IncreaseFontSize }
+  - { key: Minus, mods: Control, action: DecreaseFontSize }
+  - { key: V, mods: Control, action: Paste }
   #- { key: C,      mods: Control,            action: Copy             }
-  - { key: Left,        mods: Alt,             chars: "\x1Bb"           }
-  - { key: Left,        mods: Alt|Shift,       chars: "\x1B\x1B[D"      }
-  - { key: Right,       mods: Alt,             chars: "\x1Bf"           }
-  - { key: Right,       mods: Alt|Shift,       chars: "\x1B\x1B[C"      }
-  - { key: Down,        mods: Alt,             chars: "\x1B\x1B[B"      }
-  - { key: Down,        mods: Alt|Shift,       chars: "\x1B\x1B[B"      }
-  - { key: Up,          mods: Alt,             chars: "\x1B\x1B[A"      }
-  - { key: Up,          mods: Alt|Shift,       chars: "\x1B\x1B[A"      }
-  - { key: Key0, mods: Alt, chars: "\x1b0" }
-  - { key: Key1, mods: Alt, chars: "\x1b1" }
-  - { key: Key2, mods: Alt, chars: "\x1b2" }
-  - { key: Key3, mods: Alt, chars: "\x1b3" }
-  - { key: Key4, mods: Alt, chars: "\x1b4" }
-  - { key: Key5, mods: Alt, chars: "\x1b5" }
-  - { key: Key6, mods: Alt, chars: "\x1b6" }
-  - { key: Key7, mods: Alt, chars: "\x1b7" }
-  - { key: Key8, mods: Alt, chars: "\x1b8" }
-  - { key: Key9, mods: Alt, chars: "\x1b9" }
+  - { key: Left, mods: Alt, chars: "\eb" }
+  - { key: Left, mods: Alt|Shift, chars: "\e\e[D" }
+  - { key: Right, mods: Alt, chars: "\ef" }
+  - { key: Right, mods: Alt|Shift, chars: "\e\e[C" }
+  - { key: Down, mods: Alt, chars: "\e\e[B" }
+  - { key: Down, mods: Alt|Shift, chars: "\e\e[B" }
+  - { key: Up, mods: Alt, chars: "\e\e[A" }
+  - { key: Up, mods: Alt|Shift, chars: "\e\e[A" }
+  - { key: Key0, mods: Alt, chars: "\e0" }
+  - { key: Key1, mods: Alt, chars: "\e1" }
+  - { key: Key2, mods: Alt, chars: "\e2" }
+  - { key: Key3, mods: Alt, chars: "\e3" }
+  - { key: Key4, mods: Alt, chars: "\e4" }
+  - { key: Key5, mods: Alt, chars: "\e5" }
+  - { key: Key6, mods: Alt, chars: "\e6" }
+  - { key: Key7, mods: Alt, chars: "\e7" }
+  - { key: Key8, mods: Alt, chars: "\e8" }
+  - { key: Key9, mods: Alt, chars: "\e9" }
 
 mouse:
   hide_when_typing: true
@@ -106,10 +133,16 @@ mouse:
 selection:
   save_to_clipboard: true
 
-#shell:
-#    program: /usr/local/bin/zsh
-#    args:
-#     - new
-#     - -A
-#     - -s
-#     - main
+shell:
+    program: /usr/local/bin/tmux
+    args:
+     - -L
+     - outer
+     - -f
+     - /Users/jm/.config/tmux/prefix_C-b.conf
+     - new
+     - -A
+     - -s
+     - outer
+     - -n
+     - local
