--- a/.config/tmux/base.conf
+++ b/.config/tmux/base.conf
@@ -20,8 +20,14 @@ set -g base-index 1
 # window renumbering
 set-option -g renumber-windows on
 
+# name new windows
+bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
+
 # mouse
-set -g mouse off
+set -g mouse on
+
+# no clipboard
+set-option -s set-clipboard off
 
 # split screen bindings
 bind - split-window -v
@@ -34,15 +40,12 @@ bind '\' split-window -h
 # history
 set -g history-limit 10000
 
-# length of status message display
-set-option -g display-time 600
-
 # sync panes
 bind y setw synchronize-panes
 
 # set alternative prefix, useful for nested sessions
-#bind b set-option -g prefix C-b \; display-message "Prefix changed to C-b"
-#bind a set-option -g prefix ` \; display-message "Prefix changed to `"
+bind a set-option -g prefix C-a \; set -g status-right '#{?client_prefix,...,} #h' \; display-message "Prefix changed to C-a; Hostname info only"
+bind b set-option -g prefix C-b \; display-message "Prefix changed to C-b"
 
 # safe reattach user namespace
 # found this to be no longer necessary
