--- a/.config/tmux/base.conf
+++ b/.config/tmux/base.conf
@@ -44,8 +44,8 @@ set -g history-limit 10000
 bind y setw synchronize-panes
 
 # set alternative prefix, useful for nested sessions
-bind a set-option -g prefix C-a \; set -g status-right '#{?client_prefix,...,} #h' \; display-message "Prefix changed to C-a; Hostname info only"
-bind b set-option -g prefix C-b \; display-message "Prefix changed to C-b"
+bind a set-option -g prefix C-a \; set -g status-right '#{?client_prefix,...,} #h' \; display-message "Prefix changed to C-a; Hostname info"
+bind b set-option -g prefix C-b \; source-file "${HOME}/.config/tmux/themes/pimux_mod.tmuxtheme" \; display-message "Prefix changed to C-b; Resourced theme"
 
 # safe reattach user namespace
 # found this to be no longer necessary
