--- a/.config/tmux/base.conf
+++ b/.config/tmux/base.conf
@@ -30,8 +30,8 @@ set -g mouse on
 set-option -s set-clipboard off
 
 # split screen bindings
-bind - split-window -v
-bind '\' split-window -h
+bind - split-window -v -c "#{pane_current_path}"
+bind '\' split-window -h -c "#{pane_current_path}"
 
 # title string
 #set-option -g set-titles on
