--- a/.config/tmux/base.conf
+++ b/.config/tmux/base.conf
@@ -21,6 +21,7 @@ set -g base-index 1
 set-option -g renumber-windows on
 
 # name new windows
+bind t command-prompt -p "window name:" "new-window; rename-window '%%'"
 bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
 
 # mouse
