--- a/.config/tmux/base.conf
+++ b/.config/tmux/base.conf
@@ -21,8 +21,9 @@ set -g base-index 1
 set-option -g renumber-windows on
 
 # name new windows
+unbind c
 bind t command-prompt -p "window name:" "new-window; rename-window '%%'"
-bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
+#bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
 
 # mouse
 set -g mouse on
