--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,8 +71,6 @@
         "${env:HOME}/opt/anaconda3/envs/"
     ],
     "python.analysis.symbolsHierarchyDepthLimit": 1,
-    "python.dataScience.themeMatplotlibPlots": true,
-    "python.dataScience.sendSelectionToInteractiveWindow": false,
     // Python: Testing
     "python.testing.pytestEnabled": true,
     "python.testing.pytestArgs": [
@@ -119,4 +117,7 @@
     // ETC
     "atomKeymap.promptV3Features": true,
     "vscode-neovim.neovimExecutablePaths.darwin": "/usr/local/bin/nvim",
+    "jupyter.themeMatplotlibPlots": true,
+    "jupyter.sendSelectionToInteractiveWindow": false,
+    "editor.fontFamily": "SF Mono, Menlo, Monaco, 'Courier New', monospace",
 }
